# list_fetcher

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  inspect_sharepoint_token.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml
docker/: cert_tool.sh  export.sh  restore.sh
src/list_fetcher/: __init__.py  cli.py  models.py  sharepoint.py  utils.py
src/list_fetcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_exporter.py  test_utils.py
