[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "list-fetcher"
version = "0.1.0"
description = "Export SharePoint Online lists with schema for backup and later restore work."
requires-python = ">=3.10"
dependencies = [
  "msal>=1.28.0",
  "requests>=2.32.0",
]

[project.scripts]
list-fetcher = "list_fetcher.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
